feat: Rename project from Medibot to MigrantBot across all files
- Updated project name in profile and summarizer files.
- Changed title and application name in HTML and JSON files.
- Modified Firebase configuration to reflect new project name.
- Adjusted notification titles in service worker for push notifications.
- Updated manifest file for web app with new branding.
- Changed encryption key for QR data to match new project name.
- Updated API endpoint URLs in reminder scripts.
- Adjusted Firestore database URLs for admin initialization.
- Updated plain text email and web form messages to reflect new branding.

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,7 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_firebase_app_id
 FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"your_project_id",...}
 
 # PhonePe Payment Gateway Configuration
-PHONEPE_CLIENT_ID=your_phonepe_client_id
-PHONEPE_CLIENT_SECRET=your_phonepe_client_secret
+# (removed) PhonePe client configuration
 
 # Application Configuration
 NEXT_PUBLIC_BASE_URL=https://your-domain.com
