--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,4 @@
-# PhonePe Payment Gateway Configuration
-NEXT_PUBLIC_PHONEPE_MERCHANT_ID=M23R8YJO33CEU
-NEXT_PUBLIC_PHONEPE_SALT_KEY=1cedc54d-5c48-4cc5-a60c-a8ecd88c1b11
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+# PhonePe configuration removed from example
 
 # Other environment variables
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
