--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Medibot",
+  "name": "MigrantBot",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -68,7 +68,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
-    "pg-sdk-node": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-pg-sdk-node/releases/v2/phonepe-pg-sdk-node.tgz",
+    
     "python-shell": "^5.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
